# stock-pipeline-rust

./: Cargo.toml  build.rs  test.pb
benches/: pipeline_bench.rs
proto/: stock.proto
src/: _.rs  lib.rs  main.rs  stats.rs  stock_data.py
src/benches/: pipeline_bench.rs
src/io/: mod.rs  proto_reader.rs  proto_writer.rs
src/pb/: mod.rs
